# mpl_table

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
mpl_table/: __init__.py  api.py
tests/: conftest.py  test_create_table.py  test_mpl_table.py
tests/resources/: cell_colors.csv  percentages.csv  text_color.csv
