[tool.poetry]
name = "mpl_table"
version = "0.1.4"
description = "Create custom table using matplotlib."
authors = ["George Lenton <georgelenton@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/geo7/mpl_table"
keywords = ['matplotlib', 'table', 'custom', 'heatmap']


[tool.poetry.dependencies]
matplotlib = "^3.4.3"
pandas = "^1.3.4"
python = "^3.8"


[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
ipython = "^7.29.0"
isort = "^5.10.1"
jupyter = "^1.0.0"
jupyterlab = "^3.2.2"
mypy = "^0.910"
nb-black = "^1.0.7"
pre-commit = "^2.16.0"
pylint = "^2.12.2"
pyprojroot = "^0.2.0"
pytest = "^5.2"
pytest-mpl = "^0.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."MESSAGES CONTROL"]
max-locals = 20
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods", # dataclasses.
    "too-many-arguments",
]
good-names = [
    "ax",
    "fh",
]
